<resources>
    <string name="app_name">ElectronicRoom</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_categories">Create Categories</string>
    <string name="categories_list">Categories List</string>
    <string name="save">Save</string>
    <string name="create_products">Create Products</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="create_item">Create Item</string>
</resources>
