<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_products"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="Macbook Pro" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/category"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/productTitle"
        app:layout_constraintStart_toStartOf="@+id/productTitle"
        app:layout_constraintTop_toBottomOf="@+id/productTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow"
            android:textSize="14sp"
            tools:text="Mobile" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/category_name"
        app:layout_constraintEnd_toEndOf="@+id/category_name"
        app:layout_constraintStart_toStartOf="@+id/category_name"
        app:layout_constraintTop_toTopOf="@+id/category_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/category_name"
        app:layout_constraintStart_toStartOf="@+id/category_name"
        app:layout_constraintTop_toBottomOf="@+id/category_name"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/category_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner"
        app:rippleColor="#F06565"
        app:strokeColor="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>